# ModelArrayIO

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  README.rst  get_version.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  lint.yml  python-publish.yml  tox.yml
benchmark_results/: h5_benchmark_results_gw0.csv  h5_benchmark_results_gw1.csv  h5_benchmark_results_gw10.csv  h5_benchmark_results_gw11.csv  h5_benchmark_results_gw12.csv  h5_benchmark_results_gw13.csv  h5_benchmark_results_gw2.csv  h5_benchmark_results_gw3.csv  h5_benchmark_results_gw4.csv  h5_benchmark_results_gw5.csv  h5_benchmark_results_gw6.csv  h5_benchmark_results_gw7.csv  h5_benchmark_results_gw8.csv  h5_benchmark_results_gw9.csv  run_meta_gw0.json  run_meta_gw1.json  run_meta_gw10.json  run_meta_gw11.json  run_meta_gw12.json  run_meta_gw13.json  run_meta_gw2.json  run_meta_gw3.json  run_meta_gw4.json  run_meta_gw5.json  run_meta_gw6.json  run_meta_gw7.json  run_meta_gw8.json  run_meta_gw9.json
confixel/: __about__.py  __init__.py  cifti.py  example_h5_to_mifs.py  fixels.py  h5_storage.py  parser.py  voxels.py
docs/: Makefile  api.rst  benchmarking.rst  conf.py  index.html  index.md  index.rst  installation.rst  make.bat  outputs.rst  usage.rst
docs/_templates/: module.rst
docs/examples/: README.rst  plot_cifti_workflow.py  plot_fixel_workflow.py  plot_voxel_workflow.py
docs/sphinxext/: github_link.py
modelarrayio/: __about__.py  __init__.py  cifti.py  fixels.py  h5_storage.py  parser.py  s3_utils.py  tiledb_storage.py  voxels.py
notebooks/: README.md  readme.md  readme_convoxel.md  walkthrough_fixel-wise_data.md  walkthrough_voxel-wise_data.md
src/modelarrayio/: __init__.py  cifti.py  fixels.py  h5_storage.py  parser.py  s3_utils.py  tiledb_storage.py  voxels.py
src/modelarrayio/cli/: __init__.py  cifti_to_h5.py  diagnostics.py  export_results.py  fixels_to_h5.py  h5_export_cifti_file.py  h5_export_mif_file.py  h5_export_nifti_file.py  h5_to_cifti.py  h5_to_fixels.py  h5_to_mif.py  h5_to_nifti.py  h5_to_odx.py  h5_to_voxels.py  main.py  mif_to_h5.py  nifti_to_h5.py  odx_to_h5.py  parser_utils.py  to_modelarray.py  utils.py  voxels_to_h5.py
src/modelarrayio/storage/: __init__.py  h5_storage.py  tiledb_storage.py  utils.py
src/modelarrayio/utils/: __init__.py  _mif_format.py  cifti.py  fixels.py  mif.py  mif_image.py  misc.py  nifti.py  odx.py  s3_utils.py  voxels.py
test/: __init__.py  benchmark_data_utils.py  conftest.py  plot_h5_benchmarks.R  test_cifti_cli.py  test_cifti_cli_comprehensive.py  test_cifti_cohort.py  test_cifti_to_h5_unit.py  test_cifti_utils.py  test_cli_main_and_s3_utils.py  test_cli_utils.py  test_diagnostics.py  test_fixels_utils.py  test_h5_benchmarks.py  test_h5_export_cli.py  test_h5_storage.py  test_h5_to_odx_unit.py  test_mif_cli.py  test_mif_format_utils.py  test_mif_helpers.py  test_mif_image_unit.py  test_mif_strides.py  test_mif_to_h5_unit.py  test_mif_utils.py  test_misc_utils.py  test_modality_detection.py  test_nifti_cli.py  test_nifti_s3.py  test_odx_to_h5_unit.py  test_parser_utils.py  test_s3_utils.py  test_storage_utils.py  test_tiledb_storage.py  test_voxels_cli.py  test_voxels_s3.py  test_voxels_utils.py  utils.py
test/data_cifti_toy/: example.dscalar.nii  example.pconn.nii
test/data_voxel_toy/: FA.h5  FA_wResults.h5  README.md
tests/: test_cifti_cli.py  test_voxels_cli.py  test_voxels_s3.py
tests/data_voxel_toy/: FA_wResults.h5  README.md  cohort_FA.csv
