[build-system]
requires = [
  "hatchling>=1.24",
  "hatch-vcs>=0.3",
]
build-backend = "hatchling.build"

[project]
name = "modelarrayio"
description = "ConFixel (python) is companion converter software for ModelArray for converting data back and forth from the HDF5 file format"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "The PennLINC developers", email = "Matthew.Cieslak@pennmedicine.upenn.edu" },
]
maintainers = [
  { name = "Matt Cieslak", email = "Matthew.Cieslak@pennmedicine.upenn.edu" },
]
keywords = ["neuroimaging", "modelarray", "hdf5", "fixel", "nifti", "cifti"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# Runtime dependencies
dependencies = [
  "nibabel>=2.2.1",
  "numpy>=1.13.3",
  "pandas",
  "tqdm",
  "h5py",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PennLINC/ModelArrayIO"
Repository = "https://github.com/PennLINC/ModelArrayIO"

[project.scripts]
confixel = "modelarrayio.fixels:main"
convoxel = "modelarrayio.voxels:main"
concifti = "modelarrayio.cifti:main"
fixelstats_write = "modelarrayio.fixels:h5_to_fixels"
volumestats_write = "modelarrayio.voxels:h5_to_volumes_wrapper"
ciftistats_write = "modelarrayio.cifti:h5_to_ciftis"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# Hatch will overwrite this file during build with the computed version
version-file = "modelarrayio/__about__.py"

[tool.hatch.build]
# Default include is the package itself; no special configuration needed
# Keeping section for future customization
exclude = []
packages = [
  { include = "modelarrayio" },
]
