[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.3"]
build-backend = "hatchling.build"

[project]
name = "modelarrayio"
description = "ModelArrayIO: convert fixel, voxel, and greyordinate neuroimaging data to/from HDF5 for the ModelArray R package"
readme = "README.rst"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "The PennLINC developers", email = "Matthew.Cieslak@pennmedicine.upenn.edu" },
]
maintainers = [
  { name = "Matt Cieslak", email = "Matthew.Cieslak@pennmedicine.upenn.edu" },
]
keywords = ["neuroimaging", "modelarray", "hdf5", "fixel", "nifti", "cifti"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "nibabel>=5.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "tqdm>=4.65",
  "h5py>=3.10",
  "tiledb>=0.23",
]

dynamic = ["version"]

[project.optional-dependencies]
s3 = ["boto3"]
doc = [
  "sphinx>=6.2.1",
  "myst-parser>=2",
  "sphinx-argparse",
  "sphinx-copybutton",
  "sphinx_rtd_theme",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-bibtex",
  "sphinx-gallery",
]
test = [
  # Lower bounds matter for tox `uv_resolution = lowest-direct` (py311-min CI):
  # unpinned deps can resolve to ancient releases (e.g. coverage 3.x) that do not build on Python 3.
  "ruff>=0.4",
  "pre-commit>=3.5",
  "coverage[toml]>=7.0",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "pytest-env>=1.0",
  "matplotlib>=3.8",
]
all = ["modelarrayio[doc,test,s3]"]

[project.urls]
Homepage = "https://github.com/PennLINC/ModelArrayIO"
Repository = "https://github.com/PennLINC/ModelArrayIO"
Documentation = "https://modelarrayio.readthedocs.io"

[project.scripts]
confixel = "modelarrayio.cli.mif_to_h5:main"
convoxel = "modelarrayio.cli.nifti_to_h5:main"
concifti = "modelarrayio.cli.cifti_to_h5:main"
fixelstats_write = "modelarrayio.cli.h5_to_mif:main"
volumestats_write = "modelarrayio.cli.h5_to_nifti:main"
ciftistats_write = "modelarrayio.cli.h5_to_cifti:main"

#
# Hatch
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/modelarrayio"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/modelarrayio/__about__.py"

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  "C4",
  # "CPY",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "PIE",
  "PYI",
  "PT",
  "Q",
  # "SIM",
  # "TID",
  "FLY",
  # "PD",
  "PERF",
  "W",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "FURB",
  "RUF",
]
ignore = [
  "S105",
  "S311",  # We are not using random for cryptographic purposes
  "S603",  # subprocess used only for trusted commands (git, pandoc, test runners)
  "PIE790",
  "PERF203",
  "PLC0415",
  "PLW2901",
  "RUF005",
  "RUF012",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"docs/conf.py" = ["A001"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
# parallel: required so pytest-cov can combine data without "Can't combine arc data with line data" when
# pytest-xdist is installed (even with a single worker). See coverage.py + pytest-cov docs.
parallel = true
branch = true
omit = [
  "*/test/*",
  "*/__init__.py",
  "*/conftest.py",
  "src/modelarrayio/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "warnings\\.warn",
]

[tool.pytest.ini_options]
markers = [
  "s3: tests that require network access to public S3 (deselect with '-m not s3')",
  "benchmark: benchmarks that write persistent performance artifacts",
  "benchmark_quick: small, fast benchmark subset for local inspection",
  "benchmark_medium: medium benchmark subset excluding the largest cohort size",
  "benchmark_full: full benchmark sweep including the largest cohort size",
]
log_cli = true

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.html,*.bib,uv.lock'
ignore-words-list = 'fixel,fixels'
