[versioneer]
VCS = git
style = pep440
versionfile_source = confixel/_version.py
versionfile_build = confixel/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/PennLINC/ConFixel
author = The PennLINC developers
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = Matt Cieslak
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = ConFixel (python) is companion converter software for ModelArray for converting data back and forth from the HDF5 file format
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5
install_requires =
    nibabel >=2.2.1
    numpy >=1.13.3
    pandas
    tqdm
    h5py
test_requires =
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.entry_points]
console_scripts =
    confixel=confixel.fixels:main
    convoxel=confixel.voxels:main
    concifti=confixel.cifti:main
    fixelstats_write=confixel.fixels:h5_to_fixels
    volumestats_write=confixel.voxels:h5_to_volumes_wrapper
    ciftistats_write=confixel.cifti:h5_to_ciftis


[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    /^\s*\.\. _.*?: http/ : +E501
